<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.campbell.weathernow.MainActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80bfff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/current_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_title"
        android:background="#80bfff"
        android:textAlignment="center"
        android:layout_below="@id/location"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/current_icon"
        android:contentDescription="@string/weather_icon"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/current_string" />

    <TextView
        android:id="@+id/current_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/current_icon" />

    <TextView
        android:id="@+id/current_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/current_main" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/current_des" />

    <TextView
        android:id="@+id/current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/current_temperature" />

    <TextView
        android:id="@+id/current_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/current_humidity" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/current_wind"
        android:visibility="gone"
        android:text="@string/refresh_button"/>

    <TextView
        android:id="@+id/forcasted_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80bfff"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forcast_title"
        android:visibility="gone"
        android:layout_below="@+id/refresh_button" />

    <!-- Should only show on denial of permissions-->
    <TextView
        android:id="@+id/denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Should only show on denial of permissions-->
    <Button
        android:id="@+id/denied_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_below="@+id/denied"
        android:text="@string/denied_button"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:visibility="gone"
        android:layout_below="@id/forcasted_string" >

        <LinearLayout
            android:id="@+id/overForcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/forcast1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/forcast1_icon"
                    android:contentDescription="@string/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />

                <TextView
                    android:id="@+id/forcast1_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/forcast1_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/forcast1_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/time1_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forcast2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/forcast2_icon"
                    android:contentDescription="@string/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />

                <TextView
                    android:id="@+id/forcast2_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/forcast2_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/forcast2_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/time2_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forcast3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/forcast3_icon"
                    android:contentDescription="@string/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />

                <TextView
                    android:id="@+id/forcast3_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/forcast3_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/forcast3_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/time3_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nine"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forcast4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/forcast4_icon"
                    android:contentDescription="@string/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />

                <TextView
                    android:id="@+id/forcast4_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/forcast4_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/forcast4_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/time4_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelve"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forcast5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/forcast5_icon"
                    android:contentDescription="@string/weather_icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp" />

                <TextView
                    android:id="@+id/forcast5_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/forcast5_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/forcast5_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/time5_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifteen"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</RelativeLayout>
